# Jupitoverse

./: .gitignore  README.md  create_ponr_table.sql  first.py
ABP/: Anisha_reference.py  Rebill_Analysis_Report.py
Amdocs/: SR_V2.html  a  excel_search_engine_v2.py
Amdocs Scheduled Script/: RELEASE_PONR.py
Amdocs_python_Script/: AB__OSO_Rebill_Collaboration_v1.py  RELEASE_PONR.py  checkuserPendingtask.sh  mailtemplate.html  orion_Python_Executer.py
Arpan/: ORION_QARMPro_Script.sh
Astroid_v1/: 3D_VISUALIZATION_WORKING.md  Asteroid_Comet_Explorer.html  Asteroid_Explorer_SpaceKit.html  COMPREHENSIVE_EXPLORER_GUIDE.md  DEPLOYMENT_SUMMARY.md  DEPLOYMENT_SUMMARY.txt  FINAL_COMPLETE_700_OBJECTS.md  FIXED_AND_WORKING.md  JUPITOVERSE_INTEGRATION.md  NASA_JPL_Asteroid_Data.json  README.md  SPACEKIT_SOLUTION.md  Solar_System_Explorer_Full.html  TROUBLESHOOTING_GUIDE.md  Test_Simple.html  complete_database.json  comprehensive_nasa_data.json  nasa_sbdb_comets.json  nasa_sbdb_full.json  process_log.txt  process_nasa_data.py  v1.html
Excel/: script.py
Jupitoverse/: AI_Repository.html  HOME.html  (+19 more)
RAG Project/RAG_UDEMY/: pyproject.toml  requirements.txt
RAG Project/RAG_UDEMY/0-DataIngestParsing/: 1-dataingestion.ipynb  2-dataparsingpdf.ipynb  6-databaseparsing.ipynb
RAG Project/RAG_UDEMY/0-DataIngestParsing/data/text_files/: ML_intro.txt  python_intro.txt
RAG Project/RAG_UDEMY/1-VectorEmbedding/: embedding.ipynb  openaiembeddings.ipynb
RAG Project/RAG_UDEMY/langchain/: 1-langchainintro.ipynb  1-langchainintro_ollama.ipynb  1-langchainintro_openai.ipynb  amdocs_chat.py
(+915 files in other folders)
